Adicionei um parágrafo

--- a/Site exemplo/index.html
+++ b/Site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente reiciendis pariatur alias voluptate fuga hic voluptates quia quaerat explicabo ipsum ratione sit error, blanditiis enim laboriosam, quos laborum optio itaque.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae dicta quam ea delectus, exercitationem velit nisi voluptatem hic eius ullam? Accusamus voluptatibus deleniti dolorem eum odit ratione nihil a quae!</p>
 </body>
 </html>
